use toList instead
checked all changed list in this class are immutable